kubernetes/railsml-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: railsml-deployment
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: railsml
    spec:
      containers:
        - name: rails
          image: us.gcr.io/counting-company-production/rails
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: cloudstorage-instance-credentials
              mountPath: /secrets
              readOnly: true
        - name: ml
          image: us.gcr.io/counting-company-production/ml
      volumes:
        - name: cloudstorage-instance-credentials
          secret:
            secretName: cloudstorage-instance-credentials
