kubernetes/railsml-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: railsml-service
spec:
  selector:
    app: railsml
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
