kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rails-service
spec:
  selector:
    app: railsml
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
