kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  backend:
    serviceName: railsml-service
    servicePort: 80
